Add fortify implementation (#166)